# Open_Knowledge_Format

./: 404.html  LICENSE  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  template.py  test_mongo.py
.github/workflows/: ci.yml  docs.yml  python-publish.yml
APIreference/: index.html
aiven_mysql_bundle/database/tables/: catalog_products.md  catalogs.md  orders.md  products.md  users.md
docs/: APIreference.md  index.md
financial_bundle/documents/: DB_Annual_2023.md  EY_Financial_report_2025.md  JPM_Annual_2023.md  JPM_SE_Annual_2023.md
mongodb_bundle/database/collections/: UPI collection.md
scratch_e2e/my_bundle/documents/: deploy.md  onboarding.md
scratch_e2e/raw_docs/: deploy.txt  onboarding.md
search/: search_index.json
src/google_okf/: __init__.py  cli.py
src/google_okf/core/: __init__.py  models.py  reader.py  writer.py
src/google_okf/producers/: __init__.py  base.py  document.py  mongodb.py  mysql.py
tests/unit/: test_core.py  test_producers.py
